--- a/notificationservice/package.json
+++ b/notificationservice/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.0",
     "node-cron": "^3.0.1",
-    "nodemailer": "^6.7.7"
+    "nodemailer": "^6.7.7",
+    "uuid": "^8.3.2"
   }
 }
